<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    xmlns:android="http://schemas.android.com/apk/res/android">


<android.support.v7.widget.RecyclerView android:id="@+id/recycler_view"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_primary"
    android:clipToPadding="false"
    android:paddingBottom="@dimen/recycler_padding_bottom"
    android:paddingLeft="@dimen/list_side_margin"
    android:paddingStart="@dimen/list_side_margin"
    android:paddingRight="@dimen/list_side_margin"
    android:paddingEnd="@dimen/list_side_margin"
    android:descendantFocusability="afterDescendants"
    android:paddingTop="@dimen/recycler_padding_top"
    android:numColumns="auto_fit" />

    </LinearLayout>
