<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/map_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/start_button"
            android:layout_width="@dimen/garden_view_button_layout_width"
            android:layout_height="@dimen/garden_button_layout_height"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/garden_button_layout_margin"
            android:background="@drawable/gps_button"
            android:contentDescription="Garden View Button"
            android:text="@string/garden_view"
            android:textColor="@color/white" />


    </LinearLayout>


</FrameLayout>


